# JNIApp

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/engineer/echo/jniapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/engineer/echo/jniapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/engineer/echo/jniapp/: ExampleUnitTest.java
colorcam/: build.gradle
colorcam/src/androidTest/java/echo/engineer/colorcam/: ExampleInstrumentedTest.kt
colorcam/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
magicam/: build.gradle
magicam/src/main/: AndroidManifest.xml
magicam/src/main/res/color/: selector_image_back.xml  selector_image_edit.xml  selector_image_edit_yellow.xml
magicam/src/main/res/drawable/: selector_image_adds.xml  selector_image_back.xml  selector_image_beauty.xml
magicfilter/: CMakeLists.txt  build.gradle
magicfilter/src/androidTest/java/com/seu/magicfilter/: ExampleInstrumentedTest.java
magicfilter/src/main/java/com/seu/magicfilter/camera/: CameraEngine.java
magicfilter/src/main/java/com/seu/magicfilter/display/: MagicCameraDisplay.java  MagicDisplay.java
magicfilter/src/main/java/com/seu/magicfilter/filter/factory/: MagicFilterFactory.java
magicfilter/src/main/java/com/seu/magicfilter/utils/: MagicSDK.java  SaveTask.java
magicfilter/src/main/jni/: MagicJni.cpp  MagicSDK.cpp
magicfilter/src/main/jni/bitmap/: BitmapOperation.cpp
magicfilter/src/main/jni/skinsmooth/: MagicBeauty.cpp  MagicBeauty.h
(+14 files in other folders)
